# Teleport-v1

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_desktop.bat  build_errors.txt  build_log.txt
TeleportMobile/: App.tsx  app.json  package-lock.json  package.json
TeleportMobile/android/: build_output.txt  settings.gradle
TeleportMobile/android/app/: build.gradle
TeleportMobile/android/app/src/main/cpp/: CMakeLists.txt  teleport_rn.cpp
TeleportMobile/android/app/src/main/java/com/teleportmobile/: MainActivity.kt  MainApplication.kt  TeleportModule.kt  TeleportPackage.kt
TeleportMobile/android/app/src/main/res/values/: strings.xml
TeleportMobile/ios/: Podfile
TeleportMobile/ios/TeleportMobile/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
TeleportMobile/ios/TeleportMobile.xcodeproj/: project.pbxproj
TeleportMobile/ios/TeleportMobile.xcodeproj/xcshareddata/xcschemes/: TeleportMobile.xcscheme
TeleportMobile/src/: TeleportService.ts
android/: build.gradle.kts  gradle.properties  gradlew.bat  local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  TeleportJNI.cpp
android/app/src/main/java/com/teleport/: HotspotManager.kt  TeleportEngine.kt
android/app/src/main/java/com/teleport/model/: Device.kt  TransferProgress.kt
android/app/src/main/java/com/teleport/ui/: MainActivity.kt
android/app/src/main/java/com/teleport/ui/screens/: DeviceListScreen.kt  HotspotScreen.kt  ReceiveScreen.kt  SendScreen.kt
android/app/src/main/java/com/teleport/ui/theme/: Theme.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
cli/: CMakeLists.txt  main.cpp
cli/commands/: discover.cpp  discover.hpp  receive.cpp  receive.hpp  send.cpp  send.hpp
cli/ui/: console.cpp  console.hpp  progress.cpp  progress.hpp
core/: CMakeLists.txt
core/include/teleport/: errors.h  teleport.h  types.h
core/src/: teleport.cpp
core/src/control/: callbacks.hpp  control_client.cpp  control_client.hpp  control_server.cpp  control_server.hpp  protocol.cpp  protocol.hpp
core/src/discovery/: device_list.cpp  device_list.hpp  discovery.cpp  discovery.hpp  udp_broadcaster.cpp  udp_broadcaster.hpp
core/src/platform/: hotspot.hpp  hotspot_win.cpp  pal.cpp  pal.hpp
core/src/security/: token.cpp  token.hpp
core/src/transfer/: chunk.hpp  chunk_reader.cpp  chunk_reader.hpp  chunk_writer.cpp  chunk_writer.hpp  parallel_transfer.cpp  parallel_transfer.hpp  resume_manager.cpp  resume_manager.hpp  stream_pool.cpp  stream_pool.hpp  transfer_manager.cpp  transfer_manager.hpp  zero_copy.hpp  zero_copy_win.cpp
core/src/utils/: logger.cpp  logger.hpp  sanitize.cpp  sanitize.hpp  security_checks.hpp  uuid.cpp  uuid.hpp
core/tests/: test_discovery.cpp  test_integration.cpp  test_protocol.cpp  test_sanitize.cpp  test_transfer.cpp  test_uuid.cpp
desktop/: CMakeLists.txt
desktop/resources/: app.manifest  app.rc
desktop/src/: Application.cpp  Application.h  TeleportBridge.cpp  TeleportBridge.h  Theme.cpp  Theme.h  main.cpp
desktop/src/components/: Animations.cpp  Animations.h  DeviceCard.cpp  DeviceCard.h  FileDropZone.cpp  FileDropZone.h  TransferProgress.cpp  TransferProgress.h
desktop/src/views/: DiscoverView.cpp  DiscoverView.h  ReceiveView.cpp  ReceiveView.h  SendView.cpp  SendView.h  TransfersView.cpp  TransfersView.h
docs/: protocol_spec.md
release/Teleport/: Discover_Devices.bat  README.txt  Receive_Files.bat  Run_Teleport.bat
